2018-05-23 Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1055

	* src/methods.cc (covmat_sxSet):
	- Fixed bug in definition of *covmat_sxSet* reported by
	Dave

2018-05-23 Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1054

	* src/m_surface.cc (surfaceTelsem):
	- Added functionality for nearest neighbor interpolation, which
	can be enabled through the *d_max* GIN

	* src/methods.cc (surfaceTelsem):
	- Updated documentation of surfaceTelsem

2018-05-22 Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1053

	* src/rt4.cc (run_rt4)
	- Fixed arguments to par_optpropCalc call which caused
	  Tensor out of bounds access when number of streams was
	  increased.

2018-05-22 Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1052

	* geodetic.[h, cc] (cycle_lat_lon):
	- Added function the wraps lat/lon coordinates into ranges
	  [-90.0, 90.0] and [0.0, 360.0]

	* m_telsem.cc (telsemStandalone):
	- Added functionality for nearest neighbor interpolation

	* methods.cc (telsemStandalong):
	- Updated documentation of telsemStandalone

	* telsem.[h, cc] (calc_cellnumber_nearest_neighbor):
	- Added function that calculates cellnumber of nearest cell in
	  atlas w.r.t. to L1 norm.

2018-05-20  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1051

	* src/m_surface.cc (surfaceFastem): Removed specular_los as input.
	Now calculated internally.

	* src/m_ppath.cc (geo_posEndOfPpath)
	(geo_posLowestAltitudeOfPpath, geo_posWherePpathPassesZref):
	* src/m_rte.cc (yCalc):
	* src/rte.cc (iyb_calc): Adopte to new definition of geo_pos.

	* src/workspace.cc: Changed definition of geo_pos. It is now a
	vector of length 5. y_geo adopted.

2018-05-18  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-1050
	
	* src/CMakeLists.txt:  Added way for test_propagationmatrix
	to see global data.
	
	* src/linegunctions.{cc,h}:  Fixed bug with id<id. 
	Work ongoing.
	